--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
+:root{
+    --bg-color: #0B192C;
+    --text-color: #000000;
+    --bg-second-color: #FF6500;
+    --text-second-color: #ffff;
+    --bg-tercia-color: #1E3E62;
+}
+
+
+body {
+    background-color: var(--bg-color);
+}
