--- a/entrenadores.css
+++ b/entrenadores.css
@@ -1,6 +1,8 @@
 *{
-    margin: 0px;
-    box-sizing: border-box;
+    margin:0px;
+    box-sizing:border-box;
+    font-family:Roboto;
+    padding: 0px;
 }
 
 /* Banner */
@@ -74,7 +76,7 @@
 .contenedorprincipal{
     background-color: rgb(25, 25, 63);
     width: 100%;
-    height: 730px;
+    height: 750px;
 }
 
 .netitulo{
