--- a/css/conoceMas.css
+++ b/css/conoceMas.css
@@ -89,60 +89,66 @@ body {
 
 /*hasta aquí fue el diseño de la barra de navegación*/
 
+/*main*/
 
-/* Sección "¿Quiénes somos?" */
-.quienes-somos {
-    color: white;
+.main{
     padding: 5%;
-    margin: 1%;
 }
 
-.container{
-    margin:3%;
-    display:flex;
-    justify-content: space-around;
+
+
+.misionVision h1 {
+    text-align: center;
+    color: var(--text-second-color);
+    margin-top: -10%;
+}
+
+.misionVision h2 {
+    text-align: left;
+    color: var(--text-second-color);
+    margin-bottom: 5%;
+}
+
+.misionVision .row {
+    margin-top: 30px;
 
 }
 
-.quienes-somos h1{
-    font-size: 2.5rem;
-    margin-top: 2%
-}
-
-.quienes-somos p {
+.misionVision p {
+    color: var(--text-second-color);
     font-size: 1.2rem;
-    line-height: 1.6;
-    text-align: justify;
+    line-height: 1.6rem;
+    margin-bottom: 5%;
 }
 
-.quienes-somos img {
-    border-radius: 8px;
-    margin-bottom: 10px;
-    width: 100%;
-    height:20vh;
-    object-fit: cover;
+.misionVision .row .card{
+    background-color: var(--bg-second-color);
+    border-radius: 10px;
 }
 
 
-.quienes-somos .row {
-    margin-bottom: 20px;
+.img-representativa img {
+    max-width: 100%;
+    height: auto;
+
 }
 
-.quienes-somos .row p {
-    text-align: justify;
-    margin-top: 10px;
-}
-
-.quienes-somos .btn {
+.testimonios .card {
     background-color: var(--bg-second-color);
     border: none;
-    padding: 10px 20px;
-    font-size: 1rem;
+    border-radius: 10px;
+    width: 40vw;
+    margin-bottom: 3%;;
 }
 
-.quienes-somos .btn:hover {
-    background-color: #f05423;
-    transition: background-color 0.3s ease;
+.testimonios p {
+    font-size: 1.5rem;
+
+}
+
+.testimonios h1{
+    color: var(--text-second-color);
+    font-size: 3rem;
 }
 
 /*hasta aquí el diseño del contenido*/
