--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@
     --bg-tercia-color: #1E3E62;
   }
   html, body {
-    background-color: var(--bg-color);
+    font-family: 'Roboto', sans-serif; 
+    background-color: var(--bg-color); 
+    color: var(--text-second-color); 
+
   }
   img {
     width: 100%;
@@ -25,18 +28,36 @@
   .logo img {
     width: 120px;
   }
-  .navbar__list {
-    list-style-type: none;
-  }
-  .navbar__list a {
-    text-decoration: none;
-    color: var(--text-second-color);
-  }
-  .botones {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-  }
+
+
+/* ========================
+   NAVEGACIÓN
+   ======================== */
+   .navbar {
+    background-color: var(--bg-second-color); /* Fondo de la barra de navegación */
+}
+
+.navbar-nav .nav-link {
+    color: var(--text-second-color); /* Color de los enlaces de navegación */
+    font-size: 1.2rem; /* Tamaño de la fuente de los enlaces */
+    transition: background-color 0.3s; /* Transición suave para el fondo en hover */
+}
+
+.navbar-nav .nav-link:hover {
+    color: yellow; /* Color del texto al pasar el mouse */
+}
+
+/* ========================
+   BARRA DE BÚSQUEDA
+   ======================== */
+.search-bar {
+    max-width: 300px; /* Ancho máximo de la barra de búsqueda */
+    width: 100%; /* Ancho completo dentro de su contenedor */
+}
+
+
+
+
   .carousel-item img {
     height: 800px; 
     object-fit: cover;
@@ -115,7 +136,6 @@
     margin-bottom: 1rem; 
   }
   
-
   /*Footer*/
 
 .contenedorfinal{
@@ -184,3 +204,5 @@
 .textohorario{
   font-weight: 650;   
 }
+
+
