--- a/css/entrenadores.css
+++ b/css/entrenadores.css
@@ -1,9 +1,13 @@
+/* Estilos Generales */
+
 *{
     margin:0px;
     box-sizing:border-box;
     font-family: Roboto,sans-serif;
     padding: 0px;
 }
+
+/* Variables de color */
 
 :root {
     --bg-color: #0B192C;
@@ -14,67 +18,45 @@
   }
 
 
-    /* Banner */
-    .contenedorinicial{
-        height: 5em;
-        width: 100%;
-        background-color: var(--bg-second-color);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;   
+/* ========================
+   NAVEGACIÓN
+   ======================== */
+   .navbar {
+    background-color: var(--bg-second-color); /* Fondo de la barra de navegación */
+}
+
+.navbar-nav .nav-link {
+    color: var(--text-second-color); /* Color de los enlaces de navegación */
+    font-size: 1.2rem; /* Tamaño de la fuente de los enlaces */
+    transition: background-color 0.3s; /* Transición suave para el fondo en hover */
+}
+
+.navbar-nav .nav-link:hover {
+    color: yellow; /* Color del texto al pasar el mouse */
+}
+
+/* ========================
+   BARRA DE BÚSQUEDA
+   ======================== */
+.search-bar {
+    max-width: 300px; /* Ancho máximo de la barra de búsqueda */
+    width: 100%; /* Ancho completo dentro de su contenedor */
+}
+/* ========================
+   ANIMACIONES
+   ======================== */
+.icon-blink {
+    animation: blink-animation 1.5s infinite alternate; /* Animación de parpadeo */
+}
+
+@keyframes blink-animation {
+    0% {
+        opacity: 1; /* Opacidad completa */
     }
-    
-    .logo{
-    
-        width: 6rem;
-        height: 6rem;
+    100% {
+        opacity: 0.5; /* Opacidad reducida */
     }
-    
-    .inicio{
-        color: white;
-        text-decoration: none;
-        font-weight: 400
-    }
-    
-    .quienessomos{
-        color: white;
-        text-decoration: none;
-        font-weight: 400
-    }
-    
-    .entrenadores{
-        color: white;
-        text-decoration: none;
-        font-weight: 400
-    }
-    
-    .tienda{
-        color: white;
-        text-decoration: none;
-        font-weight: 400
-    }
-    .login{
-        color: white;
-        text-decoration: none;
-        border-radius: 15%;
-        background-color: var(--text-color);
-        height: 1.5rem;
-        width: 4rem;
-        text-align: center;
-        font-weight: 400
-       
-    }
-    
-    .creacuenta{
-        color: var(--text-second-color);
-        text-decoration: none;
-        border-radius:15%;
-        background-color: var(--bg-color);
-        height: 1.5rem;
-        width: 10rem;
-        text-align: center;
-        font-weight: 400
-    }
+}
     
     /*Body*/
 
