--- a/css/quienesSomos.css
+++ b/css/quienesSomos.css
@@ -93,7 +93,7 @@ body {
 /* Sección "¿Quiénes somos?" */
 .quienes-somos {
     color: white;
-    padding: 5%;
+    padding: 4%;
     margin: 1%;
 }
 
@@ -101,12 +101,13 @@ body {
     margin:3%;
     display:flex;
     justify-content: space-around;
-
+    
 }
 
 .quienes-somos h1{
     font-size: 2.5rem;
-    margin-top: 2%
+    margin-top: 2%;
+    color: var(--bg-second-color);
 }
 
 .quienes-somos p {
@@ -117,15 +118,29 @@ body {
 
 .quienes-somos img {
     border-radius: 8px;
-    margin-bottom: 10px;
     width: 100%;
-    height:20vh;
+    height:25vh;
     object-fit: cover;
 }
 
+.container #cont{
+    
+}
+/* Ajusta el espacio entre las tarjetas */
+.row {
+    gap: 2px; /* Espacio entre las columnas */
+}
 
-.quienes-somos .row {
-    margin-bottom: 20px;
+.card {
+    margin-bottom: 5px; /* Espacio entre las filas */
+    text-align: center;
+}
+
+.misionVision .card img{
+    background-color: var(--text-second-color);
+    border-radius: 10px;
+    
+    
 }
 
 .quienes-somos .row p {
@@ -151,7 +166,6 @@ body {
     .contenedorfinal{
         background-color: var(--text-color);
         width: 100%;
-        height: vh;
         display: flex;
         align-content: center;
         justify-content: center;
@@ -180,6 +194,6 @@ body {
    /*estilos de texto*/
     .textohorario,  .sigueme, .textoemail, .textocontacto{
         font-weight: 650;
-        color: white;
+        color:var(--text-second-color);
      }
 /*hasta aquí el diseño del footer*/
