--- a/css/blog.css
+++ b/css/blog.css
@@ -15,6 +15,15 @@
     --bg-tercia-color: #1E3E62;
   }
 
+  .header {
+    background-color: var(--bg-second-color);
+    padding: 20px;
+  }
+  .logo img {
+    width: 120px;
+  }
+
+
 /* ========================
    NAVEGACIÓN
    ======================== */
@@ -37,23 +46,9 @@
    ======================== */
 .search-bar {
     max-width: 300px; /* Ancho máximo de la barra de búsqueda */
-    width: 100%; /* Ancho completo dentro de su contenedor */
-}
-/* ========================
-   ANIMACIONES
-   ======================== */
-.icon-blink {
-    animation: blink-animation 1.5s infinite alternate; /* Animación de parpadeo */
+    width: 100%; /* Ancho completo dentro de su contenedor */
 }
 
-@keyframes blink-animation {
-    0% {
-        opacity: 1; /* Opacidad completa */
-    }
-    100% {
-        opacity: 0.5; /* Opacidad reducida */
-    }
-}
 /*Media Query*/ 
 @media (max-width: 768px) {
 
