--- a/css/blog.css
+++ b/css/blog.css
@@ -23,7 +23,6 @@
     width: 120px;
   }
 
-
 /* ========================
    NAVEGACIÓN
    ======================== */
@@ -49,41 +48,20 @@
     width: 100%; /* Ancho completo dentro de su contenedor */
 }
 
-/*Media Query*/ 
-@media (max-width: 768px) {
 
-    .imagen1{
-        width: 100%;
-        height: 100%;
-    }
-    
-    .mb-3{
-        float: left;
-        width: 100%;
-        height: 100%;
-        margin-left: 30px;
-              
-    }
-    .a1{
-        width: 45%;
-        height: auto;
-    }
-    .netitulo {
-        font-size: 1.8rem;
-    }
 
-    .grupo1 {
-        grid-template-columns: 1fr; /* Columna única en móviles */
-    }
 
-    .secciones {
-        flex-direction: column; /* Cambiar a columna en móviles */
-        align-items: center; /* Centrar elementos */
-    }
-}
+  .carousel-item img {
+    height: 800px; 
+    object-fit: cover;
+    width: 100%; 
+  }
+  
 
 
 /*Body*/
+
+
 
     .contenedorprincipal{
         background-color: var(--bg-color);
@@ -169,4 +147,88 @@
     transform: scale(1.08); 
 }
 
+
+
+@media (max-width: 600px) {
+    .contenedorprincipal{
+        height: 45rem;       
+    }
+
+    .imagen1{
+        width: 90%;
+        
+
+    }
+
+    .a1 {
+        width: 70%;
+        height: 70%;
+        justify-content: center;
+    }
+    
+    .grupo1{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+        float: right;
+        place-self: center;
+        gap: 2px;
+        padding:15px;
+    
+
+    }
+   
+    .secciones{
+        width: 100%
+    }
+
+    .is{
+        display: none;
+    }
+
+    .t1{
+    font-size: 10px;
+    color: var(--bg-second-color);
+}
+
+}
+    
+
+
+/*Footer
+    /*Caja fondo footer*/
+    .contenedorfinal{
+        background-color: var(--text-color);
+        width: 100%;
+        height: vh;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        text-align: center;
+    }
+     /*Caja texto footer*/
+    .textofinal{
+       margin: 10px;
+       color: var(--text-second-color);
+
+    }
+   /*caja contenedor redes sociales*/
+   .media{
+        display: flex;
+        justify-content: space-evenly;  
+        margin: 10px;  
+    }
+    /*espacio entre cajas del footer*/
+    .horario, .redessociales, .email, .contacto{
+        margin: 10px;
+    }
+    /*color ícono reloj*/
+    .bi-alarm{
+        color: red;
+    }
+   /*estilos de texto*/
+    .textohorario,  .sigueme, .textoemail, .textocontacto{
+        font-weight: 650;
+        color: white;   
+    }
   
