--- a/css/entrenadores.css
+++ b/css/entrenadores.css
@@ -17,6 +17,42 @@
     --bg-tercia-color: #1E3E62;
   }
 
+  .header {
+    background-color: var(--bg-second-color);
+    padding: 20px;
+  }
+  .logo img {
+    width: 120px;
+  }
+
+
+
+/* ========================
+   NAVEGACIÓN
+   ======================== */
+   .navbar {
+    background-color: var(--bg-second-color); /* Fondo de la barra de navegación */
+}
+
+.navbar-nav .nav-link {
+    color: var(--text-second-color); /* Color de los enlaces de navegación */
+    font-size: 1.2rem; /* Tamaño de la fuente de los enlaces */
+    transition: background-color 0.3s; /* Transición suave para el fondo en hover */
+}
+
+.navbar-nav .nav-link:hover {
+    color: yellow; /* Color del texto al pasar el mouse */
+}
+
+/* ========================
+   BARRA DE BÚSQUEDA
+   ======================== */
+.search-bar {
+    max-width: 300px; /* Ancho máximo de la barra de búsqueda */
+    width: 100%; /* Ancho completo dentro de su contenedor */
+}
+
+
 
     
     /*Body*/
@@ -68,6 +104,26 @@
     font-size: 16px;
 
 }
+
+
+
+@media (max-width: 600px) {
+    .contenedorprincipal{
+        height: 105rem;
+    
+    
+    }
+
+    .entrenadores1, .entrenadores2, .entrenadores3, .entrenadores4 {
+        width: 100%;
+        position: unset;
+        border-left: 1.5rem solid var(--bg-color);    
+
+    }
+
+
+}
+
     
     
 /*Footer*/
